[gd_scene load_steps=7 format=3 uid="uid://c8avj8dg4andl"]

[ext_resource type="Script" path="res://Scenes/UI/Options.gd" id="1_goqlf"]
[ext_resource type="Texture2D" uid="uid://dacdvb6sike5a" path="res://Assets/background.jpg" id="1_h1tn8"]
[ext_resource type="FontFile" uid="uid://bv61l8xb2pdfl" path="res://Assets/PixelifySans-Regular.ttf" id="3_govfu"]

[sub_resource type="Theme" id="Theme_uqqsp"]
default_font = ExtResource("3_govfu")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_63ed5"]
bg_color = Color(0.768627, 0.768627, 0.768627, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b73bd"]
bg_color = Color(0.545098, 0.545098, 0.545098, 1)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 6.0
offset_right = 3.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_goqlf")

[node name="Backdrop" type="Sprite2D" parent="."]
modulate = Color(0.105882, 0.117647, 0.113725, 1)
position = Vector2(192, 104)
scale = Vector2(0.164, 0.164)
texture = ExtResource("1_h1tn8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 96.0
offset_top = -18.0
offset_right = 474.0
offset_bottom = 233.0
scale = Vector2(0.86979, 1.06979)
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 1.23
theme_override_constants/separation = 10
alignment = 1
metadata/_edit_group_ = true

[node name="dropdown" type="OptionButton" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "None"
popup/item_0/id = 0
popup/item_1/text = "Light Rain"
popup/item_1/id = 1
popup/item_2/text = "Heavy Rain"
popup/item_2/id = 2

[node name="fruit_slider" type="HSlider" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
max_value = 20.0

[node name="bgm_toggle" type="CheckButton" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Background Music"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 0
alignment = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_left = 352.0
offset_top = 192.0
offset_right = 384.0
offset_bottom = 216.0

[node name="LinkButton" type="LinkButton" parent="CenterContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Github"
uri = "https://github.com/Godot-Dynamic-Dialog/GodotDynamicDialog"

[node name="back" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 174.0
offset_top = -1.0
offset_right = 198.0
offset_bottom = 20.0

[node name="Back" type="Button" parent="back"]
layout_mode = 2
theme = SubResource("Theme_uqqsp")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
theme_override_styles/normal = SubResource("StyleBoxFlat_63ed5")
theme_override_styles/hover = SubResource("StyleBoxFlat_b73bd")
text = "Back
"

[node name="Rain Type" type="Label" parent="."]
layout_mode = 0
offset_left = 60.0
offset_top = 73.0
offset_right = 136.0
offset_bottom = 99.0
text = "Rain Type
"

[node name="Fruit Spawns" type="Label" parent="."]
layout_mode = 0
offset_left = 60.0
offset_top = 104.0
offset_right = 159.0
offset_bottom = 130.0
text = "Fruit spawns
"

[connection signal="item_focused" from="VBoxContainer/VBoxContainer/dropdown" to="." method="_on_option_button_item_focused"]
[connection signal="item_selected" from="VBoxContainer/VBoxContainer/dropdown" to="." method="_on_option_button_item_selected"]
[connection signal="value_changed" from="VBoxContainer/VBoxContainer/fruit_slider" to="." method="_on_fruit_slider_value_changed"]
[connection signal="toggled" from="VBoxContainer/VBoxContainer/bgm_toggle" to="." method="_on_bgm_toggle_toggled"]
[connection signal="pressed" from="back/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="back/Back" to="back/Back" method="_on_pressed" flags=18]
